@@ -1,3 +1,8 @@
+2008-01-04  Sven Herzberg  <herzi@gnome-de.org>
+
+	* src/ui/main.c: use GOptionContext for argument parsing, this will
+	add the gstreamer features to the help display
+
 2008-01-03  Sven Herzberg  <herzi@gnome-de.org>
 
 	* configure.in,
